Opened 9 years ago

Closed 9 years ago

#12455 closed bug (fixed)

Twitcher regression

Reported by: ttcoder Owned by: axeld
Priority: high Milestone: R1/beta1
Component: Servers/launch_daemon Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

hrev49814: hitting Ctrl-Tab no longer switches between apps.

Tentatively assigning to app_server in case it's due to recent changes there.

Change History (2)

comment:1 by axeld, 9 years ago

Component: Servers/app_serverServers/launch_daemon
Status: newin-progress

comment:2 by axeld, 9 years ago

Resolution: fixed
Status: in-progressclosed

Fixed in hrev49819.

Note: See TracTickets for help on using tickets.